--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ hs_err_pid*
 # personal files (add from your own homework implementation into Common folder)
 HashTableMap.java
 MapADT.java
+KeyAndValue.java
