Changed test logic

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ out/production/TeamAAProjectOne/FrontEnd2/empty.txt
 out/production/TeamAAProjectOne/Test1/TestHashTableMap
 
 TeamAAProjectOne.iml
+
+library.txt
